feat: implement Firebase Auth and Data Model

--- a/competitive-platform-skeleton/company.html
+++ b/competitive-platform-skeleton/company.html
@@ -51,31 +51,10 @@
 
         <div class="container p-8 mt-8">
             <h2 class="mb-8">Candidate Pipeline</h2>
-            <div class="card p-0 overflow-hidden">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Candidate</th>
-                            <th>Role</th>
-                            <th>Score</th>
-                            <th>Assessment</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Sarah Jenkins</td>
-                            <td>Product Manager</td>
-                            <td><span class="badge tier-apex">98/100</span></td>
-                            <td><a href="#" class="text-primary font-bold">View Report</a></td>
-                        </tr>
-                        <tr>
-                            <td>Michael Chen</td>
-                            <td>Sales Lead</td>
-                            <td><span class="badge tier-strategist">85/100</span></td>
-                            <td><a href="#" class="text-primary font-bold">View Report</a></td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="card text-center p-12 bg-slate-50 border-dashed border-2 border-slate-200">
+                <h3 class="text-muted">No Active Pipeline</h3>
+                <p class="mb-4 text-sm text-muted">Connect your ATS or invite candidates to see live data here.</p>
+                <a href="contact.html" class="btn btn-secondary">Setup Integration</a>
             </div>
         </div>
     </main>
