--- a/competitive-platform-skeleton/categories.html
+++ b/competitive-platform-skeleton/categories.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categories - Zenoa</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="js/guard.js"></script>
 </head>
 
 <body>
@@ -14,7 +15,6 @@
             <a href="index.html" class="nav-logo">ZENOA</a>
             <div class="flex items-center gap-4">
                 <a href="dashboard.html" class="nav-link">Dashboard</a>
-                <a href="profile.html" class="avatar">VP</a>
             </div>
         </div>
     </nav>
@@ -27,7 +27,7 @@
 
         <div class="grid grid-3">
             <!-- Card 1 -->
-            <a href="rooms.html" class="card" style="cursor: pointer;">
+            <a href="play.html" class="card" style="cursor: pointer;">
                 <div class="mb-4 text-3xl">💼</div>
                 <h3>Business Strategy</h3>
                 <p class="mt-2 text-sm text-muted">Negotiation, market analysis, and corporate theory.</p>
@@ -37,7 +37,7 @@
             </a>
 
             <!-- Card 2 -->
-            <a href="rooms.html" class="card" style="cursor: pointer; border-color: var(--primary-color);">
+            <a href="play.html" class="card" style="cursor: pointer; border-color: var(--primary-color);">
                 <div class="mb-4 text-3xl">🧠</div>
                 <h3 style="color: var(--primary-color);">Abstract Logic</h3>
                 <p class="mt-2 text-sm text-muted">Pattern recognition, puzzles, and rapid math.</p>
@@ -47,7 +47,7 @@
             </a>
 
             <!-- Card 3 -->
-            <a href="rooms.html" class="card" style="cursor: pointer;">
+            <a href="play.html" class="card" style="cursor: pointer;">
                 <div class="mb-4 text-3xl">⚖️</div>
                 <h3>Ethical Dilemmas</h3>
                 <p class="mt-2 text-sm text-muted">Moral philosophy and decision making.</p>
