--- a/competitive-platform-skeleton/index.html
+++ b/competitive-platform-skeleton/index.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zenoa - Competitive Intelligence</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="js/guard.js"></script>
 </head>
 
 <body>
     <nav class="navbar">
         <div class="container flex justify-between items-center">
             <a href="index.html" class="nav-logo">ZENOA</a>
-            <div class="flex items-center gap-4">
-                <a href="rooms.html" class="nav-link">Rooms</a>
-                <a href="leaderboard.html" class="nav-link">Leaderboard</a>
+            <div class="flex items-center gap-4" id="navLinks">
                 <a href="login.html" class="nav-link">Login</a>
                 <a href="signup.html" class="btn btn-primary" style="padding: 0.5rem 1rem; font-size: 0.9rem;">Sign
                     Up</a>
@@ -35,8 +34,6 @@
             <div class="flex justify-center gap-4">
                 <a href="signup.html" class="btn btn-primary" style="padding: 1rem 2rem; font-size: 1.1rem;">Start
                     Playing</a>
-                <a href="rooms.html" class="btn btn-secondary" style="padding: 1rem 2rem; font-size: 1.1rem;">Enter
-                    Rooms</a>
             </div>
         </div>
 
@@ -58,28 +55,30 @@
                 <p class="mt-2 text-sm">Compete in real-time rooms. 5-minute rounds. Instant feedback.</p>
             </div>
         </div>
-
-        <div class="container p-8 text-center">
-            <div class="card mb-8" style="background: var(--secondary-color); color: white; border: none;">
-                <h2 style="color: white;">Ready to compete?</h2>
-                <p style="color: #94a3b8;" class="mb-8 pl-4 pr-4">Join 10,000+ strategists analyzing their potential.
-                </p>
-                <a href="signup.html" class="btn" style="background: white; color: black;">Create Account</a>
-            </div>
-        </div>
     </main>
 
     <footer class="footer">
         <div class="container flex justify-between items-center">
             <span class="font-bold">ZENOA</span>
             <div class="flex gap-4 text-sm text-muted">
-                <a href="about.html">About</a>
-                <a href="pricing.html">Pricing</a>
-                <a href="company.html">Business</a>
+                <a href="methodology.html">Methodology</a>
                 <a href="contact.html">Contact</a>
             </div>
         </div>
     </footer>
+
+    <script type="module">
+        import { auth } from './js/firebase.js';
+        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                document.getElementById('navLinks').innerHTML = `
+                    <a href="dashboard.html" class="btn btn-primary">Go to Dashboard</a>
+                `;
+            }
+        });
+    </script>
 </body>
 
 </html>
