--- a/competitive-platform-skeleton/login.html
+++ b/competitive-platform-skeleton/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Zenoa</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="js/guard.js"></script>
 </head>
 
 <body>
@@ -23,19 +24,20 @@
                 <p>Enter your credentials to access the dashboard.</p>
             </div>
 
-            <form action="dashboard.html">
+            <form id="loginForm">
                 <div class="mb-4">
                     <label class="mb-2 block font-semibold text-sm">Email</label>
-                    <input type="email" class="form-input" placeholder="name@company.com" required>
+                    <input type="email" id="email" class="form-input" placeholder="name@company.com" required>
                 </div>
                 <div class="mb-8">
                     <div class="flex justify-between mb-2">
                         <label class="block font-semibold text-sm">Password</label>
-                        <a href="contact.html" class="text-sm text-primary">Forgot?</a>
+                        <a href="#" class="text-sm text-primary">Forgot?</a>
                     </div>
-                    <input type="password" class="form-input" placeholder="••••••••" required>
+                    <input type="password" id="password" class="form-input" placeholder="••••••••" required>
                 </div>
-                <button type="submit" class="btn btn-primary" style="width: 100%;">Sign In</button>
+                <div id="errorMessage" class="mb-4 text-red-500 text-sm hidden"></div>
+                <button type="submit" id="loginBtn" class="btn btn-primary" style="width: 100%;">Sign In</button>
             </form>
 
             <div class="mt-6 text-center text-sm text-muted">
@@ -44,6 +46,37 @@
             </div>
         </div>
     </main>
+
+    <script type="module">
+        import { loginUser } from './js/auth.js';
+
+        const loginForm = document.getElementById('loginForm');
+        const loginBtn = document.getElementById('loginBtn');
+        const errorMessage = document.getElementById('errorMessage');
+
+        loginForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+
+            try {
+                loginBtn.textContent = "Signing In...";
+                loginBtn.disabled = true;
+                errorMessage.classList.add('hidden');
+
+                await loginUser(email, password);
+                // Redirect is handled by guard.js/auth state change or we can force it here
+                window.location.href = "dashboard.html";
+
+            } catch (error) {
+                console.error(error);
+                errorMessage.textContent = "Invalid email or password.";
+                errorMessage.classList.remove('hidden');
+                loginBtn.textContent = "Sign In";
+                loginBtn.disabled = false;
+            }
+        });
+    </script>
 </body>
 
 </html>
