--- a/competitive-platform-skeleton/profile.html
+++ b/competitive-platform-skeleton/profile.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile - Zenoa</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="js/guard.js"></script>
+    <style>
+        .hidden {
+            display: none !important;
+        }
+    </style>
 </head>
 
 <body>
@@ -15,25 +21,29 @@
             <div class="flex items-center gap-4">
                 <a href="dashboard.html" class="nav-link">Dashboard</a>
                 <a href="rooms.html" class="nav-link">Rooms</a>
-                <a href="profile.html" class="avatar">VP</a>
+                <div class="flex gap-4 ml-4">
+                    <button id="logoutBtn" class="text-sm text-red-500 font-bold hover:underline">Logout</button>
+                </div>
             </div>
         </div>
     </nav>
 
     <main class="container p-8">
-        <div class="grid grid-3">
+        <div id="loadingState" class="text-center p-8">Loading profile...</div>
+
+        <!-- PROFILE CONTENT -->
+        <div id="profileContent" class="grid grid-3 hidden">
             <!-- User Info -->
             <div class="card text-center p-8">
-                <div class="avatar mx-auto mb-4" style="width: 100px; height: 100px; font-size: 2rem;">VP</div>
-                <h1 style="font-size: 1.5rem;">Vedant P.</h1>
-                <p class="mb-4 text-muted">Strategist • Level 42</p>
-                <div class="badge tier-strategist mb-8">Top 15%</div>
+                <div class="avatar mx-auto mb-4" id="profileAvatar"
+                    style="width: 100px; height: 100px; font-size: 2rem;">--</div>
+                <h1 style="font-size: 1.5rem;" id="profileName">...</h1>
+                <p class="mb-4 text-muted" id="profileMeta">Rookie • Level 1</p>
+                <div class="badge tier-rookie mb-8" id="profileTierBadge">Rookie</div>
 
                 <h4 class="text-left text-sm uppercase text-muted mb-4">Decision Style</h4>
-                <div class="flex flex-wrap gap-2 justify-center mb-8">
-                    <span class="tag-decision highlight">Risk-Aware</span>
-                    <span class="tag-decision">Fast Decider</span>
-                    <span class="tag-decision">Utilitarian</span>
+                <div class="flex flex-wrap gap-2 justify-center mb-8" id="decisionTags">
+                    <span class="text-sm text-muted">No data yet.</span>
                 </div>
 
                 <div class="flex flex-col gap-2">
@@ -45,69 +55,114 @@
             <div class="card" style="grid-column: span 2;">
                 <h3 class="mb-6">Cognitive Metrics</h3>
 
-                <div class="grid grid-2 gap-8 mb-8">
-                    <div>
-                        <div class="meter-container">
-                            <span class="meter-label">Consistency</span>
-                            <div class="meter-track">
-                                <div class="meter-fill" style="width: 85%; background: var(--tier-apex);"></div>
+                <div id="metricsContainer" class="hidden">
+                    <div class="grid grid-2 gap-8 mb-8">
+                        <div>
+                            <div class="meter-container">
+                                <span class="meter-label">Consistency</span>
+                                <div class="meter-track">
+                                    <div class="meter-fill" style="width: 85%; background: var(--tier-apex);"></div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="meter-container">
-                            <span class="meter-label">Adaptability</span>
-                            <div class="meter-track">
-                                <div class="meter-fill" style="width: 65%; background: var(--tier-strategist);"></div>
+                            <div class="meter-container">
+                                <span class="meter-label">Adaptability</span>
+                                <div class="meter-track">
+                                    <div class="meter-fill" style="width: 65%; background: var(--tier-strategist);">
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="meter-container">
-                            <span class="meter-label">Speed</span>
-                            <div class="meter-track">
-                                <div class="meter-fill" style="width: 92%; background: var(--primary-color);"></div>
+                            <div class="meter-container">
+                                <span class="meter-label">Speed</span>
+                                <div class="meter-track">
+                                    <div class="meter-fill" style="width: 92%; background: var(--primary-color);"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="p-4 bg-slate-50 rounded border border-gray-100">
-                        <h4 class="text-sm font-bold mb-2">Category Strengths</h4>
-                        <div class="flex items-center justify-between mb-2">
-                            <span class="text-sm">Strategic Thinking</span>
-                            <span class="badge tier-apex">S Tier</span>
-                        </div>
-                        <div class="flex items-center justify-between">
-                            <span class="text-sm">Social Intelligence</span>
-                            <span class="badge tier-rookie">C Tier</span>
-                        </div>
-                    </div>
+                    <h3 class="mb-4">Historical Performance</h3>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="text-xs">Scenario</th>
+                                <th class="text-xs">Category</th>
+                                <th class="text-xs text-right">Result</th>
+                            </tr>
+                        </thead>
+                        <tbody id="historyTableBody">
+                            <!-- Populated by JS -->
+                        </tbody>
+                    </table>
                 </div>
 
-                <h3 class="mb-4">Historical Performance</h3>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th class="text-xs">Scenario</th>
-                            <th class="text-xs">Category</th>
-                            <th class="text-xs">Date</th>
-                            <th class="text-xs text-right">Result</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Supply Chain Crisis</td>
-                            <td><span class="badge tier-architect">Risk</span></td>
-                            <td class="text-muted text-sm">2h ago</td>
-                            <td class="text-right"><span class="tag-decision">Pragmatic</span></td>
-                        </tr>
-                        <tr>
-                            <td>Merger Negotiation</td>
-                            <td><span class="badge tier-strategist">Strategy</span></td>
-                            <td class="text-muted text-sm">Yesterday</td>
-                            <td class="text-right"><span class="tag-decision">Aggressive</span></td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div id="emptyMetrics" class="text-center p-8 border border-dashed border-gray-200 rounded">
+                    <p class="text-muted">Metrics unlock after completing assessments.</p>
+                    <a href="play.html" class="btn btn-primary mt-4">Play Now</a>
+                </div>
             </div>
         </div>
     </main>
+
+    <script type="module">
+        import { auth } from './js/firebase.js';
+        import { logoutUser } from './js/auth.js';
+        import { getUserStats, getUserProfile } from './js/data.js';
+        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+        document.getElementById('logoutBtn').addEventListener('click', logoutUser);
+
+        onAuthStateChanged(auth, async (user) => {
+            if (user) {
+                const stats = await getUserStats(user.uid);
+                const profile = await getUserProfile(user.uid);
+
+                document.getElementById('loadingState').classList.add('hidden');
+                document.getElementById('profileContent').classList.remove('hidden');
+
+                // Basic Info
+                const name = profile?.displayName || user.email;
+                document.getElementById('profileName').textContent = name;
+                document.getElementById('profileAvatar').textContent = name.substring(0, 2).toUpperCase();
+
+                // Stats Logic
+                if (stats && stats.matchesPlayed > 0) {
+                    document.getElementById('metricsContainer').classList.remove('hidden');
+                    document.getElementById('emptyMetrics').classList.add('hidden');
+
+                    let tier = "Rookie";
+                    if (stats.sr > 1200) tier = "Challenger";
+                    if (stats.sr > 1500) tier = "Strategist";
+
+                    document.getElementById('profileMeta').textContent = `${tier} • Assessment ${stats.matchesPlayed}`;
+                    document.getElementById('profileTierBadge').textContent = tier;
+                    document.getElementById('profileTierBadge').className = `badge tier-${tier.toLowerCase()} mb-8`;
+
+                    // Populate Decision Tags
+                    if (stats.decisionStyles) {
+                        const container = document.getElementById('decisionTags');
+                        container.innerHTML = '';
+                        [...new Set(stats.decisionStyles)].forEach(style => {
+                            container.innerHTML += `<span class="tag-decision highlight capitalize">${style}</span>`;
+                        });
+                    }
+
+                    // Dummy History (In real app, fetch from 'responses' collection)
+                    document.getElementById('historyTableBody').innerHTML = `
+                         <tr>
+                            <td>Last Assessment</td>
+                            <td><span class="badge tier-architect">General</span></td>
+                            <td class="text-right"><span class="tag-decision capitalize">${stats.decisionStyles[stats.decisionStyles.length - 1] || 'Pending'}</span></td>
+                        </tr>
+                    `;
+
+                } else {
+                    // Empty User
+                    document.getElementById('metricsContainer').classList.add('hidden');
+                    document.getElementById('emptyMetrics').classList.remove('hidden');
+                }
+            }
+        });
+    </script>
 </body>
 
 </html>
