--- a/competitive-platform-skeleton/rooms.html
+++ b/competitive-platform-skeleton/rooms.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rooms - Zenoa</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="js/guard.js"></script>
 </head>
 
 <body>
@@ -14,74 +15,34 @@
             <a href="index.html" class="nav-logo">ZENOA</a>
             <div class="flex items-center gap-4">
                 <a href="dashboard.html" class="nav-link">Dashboard</a>
-                <a href="profile.html" class="avatar">VP</a>
             </div>
         </div>
     </nav>
 
     <main class="container p-8">
         <div class="flex justify-between items-center mb-8">
-            <h1 style="font-size: 2rem;">Active Sessions</h1>
-            <a href="room.html" class="btn btn-primary">+ Create Room</a>
+            <h1 style="font-size: 2rem;">Lobby</h1>
+            <a href="play.html" class="btn btn-primary">Quick Match</a>
         </div>
 
-        <div class="grid grid-3">
-            <!-- Room 1 -->
-            <div class="card">
-                <div class="flex justify-between items-start mb-4">
-                    <div>
-                        <h3 class="text-lg">Strategy Alpha</h3>
-                        <span class="text-sm text-muted">Host: Vedant P.</span>
-                    </div>
-                    <span class="badge tier-apex">Ranked</span>
-                </div>
-                <div class="flex justify-between items-center text-sm mb-4">
-                    <span>Business Logic</span>
-                    <span>3/5 Players</span>
-                </div>
-                <div class="progress-track mb-4" style="height: 4px;">
-                    <div class="progress-fill" style="width: 60%; background: var(--primary-color);"></div>
-                </div>
-                <a href="room.html" class="btn btn-secondary" style="width: 100%;">Join Lobby</a>
-            </div>
+        <div class="card text-center p-12">
+            <div class="text-4xl mb-4">🏠</div>
+            <h3>No Custom Rooms Active</h3>
+            <p class="text-muted mb-8">There are no public custom lobbies open right now. Start a Quick Match to improve
+                your SR.</p>
+            <a href="play.html" class="btn btn-primary" style="padding: 1rem 3rem;">Find Match</a>
+        </div>
 
-            <!-- Room 2 -->
-            <div class="card" style="border-left: 4px solid var(--tier-strategist);">
-                <div class="flex justify-between items-start mb-4">
-                    <div>
-                        <h3 class="text-lg">Quickfire Logic</h3>
-                        <span class="text-sm text-muted">Host: System</span>
-                    </div>
-                    <span class="badge tier-rookie">Casual</span>
+        <div class="mt-8">
+            <h3 class="mb-4">Recent Activity</h3>
+            <div class="grid grid-3 opacity-50">
+                <!-- Placeholders -->
+                <div class="card p-4">
+                    <span class="text-xs text-muted">Waiting for data...</span>
                 </div>
-                <div class="flex justify-between items-center text-sm mb-4">
-                    <span>Abstract</span>
-                    <span>1/10 Players</span>
+                <div class="card p-4">
+                    <span class="text-xs text-muted">Waiting for data...</span>
                 </div>
-                <div class="progress-track mb-4" style="height: 4px;">
-                    <div class="progress-fill" style="width: 10%; background: var(--secondary-color);"></div>
-                </div>
-                <a href="room.html" class="btn btn-secondary" style="width: 100%;">Join Lobby</a>
-            </div>
-
-            <!-- Room 3 -->
-            <div class="card">
-                <div class="flex justify-between items-start mb-4">
-                    <div>
-                        <h3 class="text-lg">Ethics Debate</h3>
-                        <span class="text-sm text-muted">Host: Sarah J.</span>
-                    </div>
-                    <span class="badge tier-architect">Private</span>
-                </div>
-                <div class="flex justify-between items-center text-sm mb-4">
-                    <span>Philosophy</span>
-                    <span>Full</span>
-                </div>
-                <div class="progress-track mb-4" style="height: 4px;">
-                    <div class="progress-fill" style="width: 100%; background: var(--text-muted);"></div>
-                </div>
-                <button class="btn btn-secondary" style="width: 100%; opacity: 0.5; cursor: not-allowed;">Spectate
-                    Only</button>
             </div>
         </div>
     </main>
