--- a/competitive-platform-skeleton/settings.html
+++ b/competitive-platform-skeleton/settings.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings - Zenoa</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="js/guard.js"></script>
 </head>
 
 <body>
@@ -27,16 +28,19 @@
             <div class="grid grid-2">
                 <div>
                     <label class="mb-2 block font-semibold text-sm">Username</label>
-                    <input type="text" class="form-input" value="Vedant P.">
+                    <input type="text" id="usernameInput" class="form-input" value="..." disabled>
                 </div>
                 <div>
                     <label class="mb-2 block font-semibold text-sm">Email</label>
-                    <input type="email" class="form-input" value="vedant@example.com">
+                    <input type="email" id="emailInput" class="form-input" value="..." disabled>
                 </div>
             </div>
+            <!-- 
             <div class="mt-4 text-right">
                 <button class="btn btn-primary">Save Changes</button>
             </div>
+            -->
+            <p class="text-xs text-muted mt-2">Account details are managed via Identity Provider.</p>
         </div>
 
         <div class="card mb-8">
@@ -61,9 +65,37 @@
         <div class="card" style="border-color: #fecaca; background: #fef2f2;">
             <h3 style="color: #ef4444;">Danger Zone</h3>
             <p class="mb-4">Once you delete your account, there is no going back.</p>
-            <a href="index.html" class="btn" style="background: #ef4444; color: white;">Delete Account</a>
+            <button id="deleteAccountBtn" class="btn" style="background: #ef4444; color: white;">Delete Account</button>
         </div>
     </main>
+
+    <script type="module">
+        import { auth } from './js/firebase.js';
+        import { getUserProfile } from './js/data.js';
+        import { onAuthStateChanged, deleteUser } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+        onAuthStateChanged(auth, async (user) => {
+            if (user) {
+                const profile = await getUserProfile(user.uid);
+                document.getElementById('usernameInput').value = profile?.displayName || "Anonymous";
+                document.getElementById('emailInput').value = user.email;
+            }
+        });
+
+        document.getElementById('deleteAccountBtn').addEventListener('click', async () => {
+            if (confirm("Are you sure you want to delete your account? This cannot be undone.")) {
+                const user = auth.currentUser;
+                try {
+                    await deleteUser(user);
+                    alert("Account deleted.");
+                    window.location.href = "index.html";
+                } catch (e) {
+                    console.error(e);
+                    alert("Error deleting account. You may need to re-login first.");
+                }
+            }
+        });
+    </script>
 </body>
 
 </html>
